--- a/app/javascript/styles/mastodon-bird-ui/layout-multiple-columns.scss
+++ b/app/javascript/styles/mastodon-bird-ui/layout-multiple-columns.scss
@@ -1,5 +1,6 @@
 /* Mastodon Bird UI by @rolle@mementomori.social
-   2.0.0rc15 */
+   Edit for OCCMv3 by Lastorder-DC
+   2.0.0rc17 */
 
 /* CSS variables */
 :root {
@@ -1584,7 +1585,7 @@ body.embed .detailed-status,
 
 .layout-multiple-columns .media-gallery > .media-gallery__item:nth-of-type(odd),
 .layout-multiple-columns .media-gallery > .media-gallery__item:nth-of-type(odd) > a,
-.layout-multiple-columns .media-gallery__preview:nth-of-type(odd),
+.layout-multiple-columns .media-gallery__preview:nth-of-type(odd)
  {
   border-bottom-right-radius: 0;
   border-top-right-radius: 0;
@@ -1751,7 +1752,7 @@ body.embed .detailed-status__meta .detailed-status__link .icon-retweet,
 
 /* Hidden things */
 /* stylelint-disable-next-line */
-.layout-multiple-columns .column-header .column-header__icon:not(.icon-hashtag):not(.icon-user-plus):not(.icon-user-times) {
+.layout-multiple-columns .column-header .column-header__icon:not(.icon-user-plus):not(.icon-user-times) {
   display: none;
 }
 
@@ -3352,10 +3353,12 @@ body.embed .button.logo-button:hover,
 }
 
 /* Explore icon */
+.layout-multiple-columns .column-link .icon-explore,
 .layout-multiple-columns .column-link .icon-hashtag {
   background-image: var(--icon-hashtag);
 }
 
+.layout-multiple-columns .column-link.active .icon-explore,
 .layout-multiple-columns .column-link.active .icon-hashtag {
   background-image: var(--icon-hashtag-active);
 }
@@ -4144,8 +4147,8 @@ div[tabindex="-1"] + div[tabindex="-1"] > .status__wrapper > .status-reply.statu
 
   /* Detailed status offset for boost animation */
   .layout-multiple-columns.no-reduce-motion .detailed-status__button .icon-button.active:focus .icon-retweet {
-    left: -87px;
-    top: -39px;
+    left: -89px;
+    top: -47px;
   }
 
   /* Offset in numbered item */
@@ -4281,7 +4284,7 @@ div[tabindex="-1"] + div[tabindex="-1"] > .status__wrapper > .status-reply.statu
   pointer-events: none;
   position: absolute;
   top: -38px;
-  transform: scale(.6);
+  transform: scale(.65);
   width: 100px;
 }
 
