--- a/app/javascript/styles/mastodon-bird-ui/layout-single-column.scss
+++ b/app/javascript/styles/mastodon-bird-ui/layout-single-column.scss
@@ -1,5 +1,6 @@
 /* Mastodon Bird UI by @rolle@mementomori.social
-   2.0.0rc15 */
+   Edit for OCCMv3 by Lastorder-DC
+   2.0.0rc17 */
 
 /* CSS variables */
 :root {
@@ -1612,8 +1613,8 @@ body.embed .detailed-status .video-player,
 
 .layout-single-column .media-gallery > .media-gallery__item:nth-of-type(odd),
 .layout-single-column .media-gallery > .media-gallery__item:nth-of-type(odd) > a,
-.layout-single-column .media-gallery__preview:nth-of-type(odd),
- {
+.layout-single-column .media-gallery__preview:nth-of-type(odd)
+{
   border-bottom-right-radius: 0;
   border-top-right-radius: 0;
 }
@@ -1800,7 +1801,7 @@ body.embed .detailed-status__meta .detailed-status__link .fa-retweet,
 
 /* Hidden things */
 /* stylelint-disable-next-line */
-.layout-single-column .column-header .column-header__icon:not(.icon-hashtag):not(.icon-user-plus):not(.icon-user-times) {
+.layout-single-column .column-header .column-header__icon:not(.icon-user-plus):not(.icon-user-times) {
   display: none;
 }
 
@@ -2449,7 +2450,7 @@ body.embed .detailed-status__meta .detailed-status__link .fa-retweet,
 /* stylelint-enable no-duplicate-selectors */
 
 /* ...except on those that have label with GitHub, github, YouTube or similar */
-.layout-single-column .account__header__bio .account__header__fields dl:has(dt[title*="github" i], dt[title*="유튜브" i], dt[title*="사이트" i], dt[title*="트위치" i], dt[title*="트위터" i], dt[title*="디스코드" i], dt[title*="linkedin" i], dt[title*="인스타" i], dt[title="IG"], dt[title~="마스토돈 계정" i], dt[title~="마스토돈 계정" i], dt[title~="account" i], dt[title="부계정" i], dt[title*="마스토돈" i], dt[title*="masto" i], dt[title*="ko-fi" i], dt[title*="kofi" i], dt[title*="페이팔" i], dt[title*="patreon" i], dt[title*="스레드" i], dt[title*="블루스카이" i], dt[title*="nostr" i], dt[title*="페이스북" i], dt[title*="friendica" i], dt[title*="pronouns" i], dt[title*="wordpress" i], dt[title*="페북" i], dt[title*="밴드캠프" i]) {
+.layout-single-column .account__header__bio .account__header__fields dl:has(dt[title*="github" i], dt[title*="youtube" i], dt[title*="website" i], dt[title*="twitch" i], dt[title*="twitter" i], dt[title="x" i], dt[title*="discord" i], dt[title*="linkedin" i], dt[title*="instagram" i], dt[title="IG"], dt[title~="Mastodon account" i], dt[title~="Mastodon account" i], dt[title~="account" i], dt[title="Alt account" i], dt[title*="mastodon" i], dt[title*="masto" i], dt[title*="ko-fi" i], dt[title*="kofi" i], dt[title*="paypal" i], dt[title*="patreon" i], dt[title*="threads" i], dt[title*="bluesky" i], dt[title*="nostr" i], dt[title*="facebook" i], dt[title*="friendica" i], dt[title*="pronouns" i], dt[title*="wordpress" i], dt[title*="fb" i], dt[title*="bandcamp" i]) {
   max-width: 50%;
 
   /* Move to last */
@@ -2493,7 +2494,7 @@ body.embed .detailed-status__meta .detailed-status__link .fa-retweet,
   width: 18.5px;
 }
 
-.layout-single-column .account__header__bio .account__header__fields dl:has(dt[title="IG"], dt[title*="인스타" i])::after {
+.layout-single-column .account__header__bio .account__header__fields dl:has(dt[title="IG"], dt[title*="instagram" i])::after {
   content: var(--icon-instagram);
   height: 18.5px;
   width: 18.5px;
@@ -3477,10 +3478,12 @@ body.embed .button.logo-button:hover,
 }
 
 /* Explore icon */
+.layout-single-column .column-link .icon-explore,
 .layout-single-column .column-link .icon-hashtag {
   background-image: var(--icon-hashtag);
 }
 
+.layout-single-column .column-link.active .icon-explore,
 .layout-single-column .column-link.active .icon-hashtag {
   background-image: var(--icon-hashtag-active);
 }
@@ -3754,6 +3757,7 @@ body.embed .button.logo-button:hover,
     backdrop-filter: blur(12px);
     /* stylelint-disable-next-line */
     -webkit-backface-visibility: hidden;
+    backface-visibility: hidden;
     background-color: var(--color-bg-75);
     content: '';
     /* Height is .ui__header + .tabs-bar__wrapper */
@@ -4274,7 +4278,7 @@ div[tabindex="-1"] + div[tabindex="-1"] > .status__wrapper > .status-reply.statu
 
   /* Offset in numbered item */
   .layout-single-column.no-reduce-motion .status__action-bar .icon-button.icon-button--with-counter.active:focus .icon-retweet {
-    left: -84px;
+    left: -82px;
   }
 
   .layout-single-column.no-reduce-motion .status__action-bar .icon-button.icon-button--with-counter.activate .icon-button__counter,
@@ -4400,11 +4404,11 @@ div[tabindex="-1"] + div[tabindex="-1"] > .status__wrapper > .status-reply.statu
   /* stylelint-disable-next-line */
   content: '' !important;
   height: 100px;
-  left: -37px;
+  left: -38px;
   pointer-events: none;
   position: absolute;
   top: -40px;
-  transform: scale(.55);
+  transform: scale(.6);
   width: 100px;
 }
 
