--- a/app/javascript/styles/mastodon-bird-ui/layout-multiple-columns.scss
+++ b/app/javascript/styles/mastodon-bird-ui/layout-multiple-columns.scss
@@ -1,6 +1,6 @@
 /* Mastodon Bird UI by @rolle@mementomori.social
    Edit for OCCMv3 by Lastorder-DC
-   2.1.2rc10 */
+   2.1.2rc13 */
 
 /* CSS variables */
 :root {
@@ -1614,16 +1614,6 @@ body.embed .detailed-status,
   padding-left: calc(24px + var(--gap-default));
 }
 
-/* Media inside status update tinted to right */
-.layout-multiple-columns .status .audio-player,
-.layout-multiple-columns .status .video-player,
-.layout-multiple-columns .status .media-gallery {
-  margin-left: auto;
-  /* Need to override inline styles */
-  /* stylelint-disable-next-line */
-  width: calc(100% - calc(var(--size-avatar) + var(--gap-default))) !important;
-}
-
 /* Fix aspect-ratio for some videos in mastodon v4.1.5-nightly-2023-07-26 */
 .layout-multiple-columns div[style*='aspect-ratio']:not([class]) {
 
@@ -3116,6 +3106,14 @@ body .compose-form .compose-form__uploads {
   color: var(--color-accent);
 }
 
+/* Override new warning button color (.dropdown-button.warning), v4.4.0-alpha.4+mementomods-2025-05-03 */
+.layout-multiple-columns .compose-form__dropdowns .dropdown-button.warning,
+.layout-multiple-columns .compose-form__dropdowns .dropdown-button.warning.active,
+.layout-multiple-columns .compose-form__dropdowns .dropdown-button.warning:hover,
+.layout-multiple-columns .compose-form__dropdowns .dropdown-button.warning:focus {
+  color: var(--color-yellow);
+}
+
 .layout-multiple-columns .compose-form__submit {
   flex: unset;
 }
@@ -3379,6 +3377,7 @@ body .compose-form .compose-form__uploads {
 .layout-multiple-columns .icon-user-plus.column-link__icon path,
 .layout-multiple-columns .icon.icon-undefined path,
 .layout-multiple-columns .icon.icon-users path,
+.layout-multiple-columns .account__header__tabs__buttons .optional path,
 .layout-multiple-columns .account__header__tabs__buttons .icon.icon-user-plus path,
 .layout-multiple-columns .notification__filter-bar .icon.icon-user-plus path,
 .layout-multiple-columns .account__header__tabs__buttons .icon.icon-tasks path,
