--- a/app/javascript/styles/mastodon-bird-ui-contrast.scss
+++ b/app/javascript/styles/mastodon-bird-ui-contrast.scss
@@ -1,5 +1,5 @@
-@import 'contrast/variables';
-@import 'application';
-@import 'contrast/diff';
+@use 'contrast/variables';
+@use 'application';
+@use 'contrast/diff';
 @import 'mastodon-bird-ui/layout-single-column.scss';
 @import 'mastodon-bird-ui/layout-multiple-columns.scss';
