--- a/app/javascript/styles/mastodon-bird-ui-dark.scss
+++ b/app/javascript/styles/mastodon-bird-ui-dark.scss
@@ -1,3 +1,3 @@
-@import 'application';
+@use 'application';
 @import 'mastodon-bird-ui/layout-single-column.scss';
 @import 'mastodon-bird-ui/layout-multiple-columns.scss';
